--- a/app/src/main/res/drawable/regbackgroundcolor.xml
+++ b/app/src/main/res/drawable/regbackgroundcolor.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="90" android:startColor="#e8198b" android:endColor="#fdd6bd" android:type="linear"></gradient>
+            <gradient android:angle="90" android:startColor="#e6b980" android:endColor="#eacda3"></gradient>
+
         </shape>
     </item>
-
 </selector>
