--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/regbackgroundcolor"
+
 
 
     >
@@ -19,7 +19,7 @@
         android:text="Quay lại"
         android:textColor="@color/white"
         android:textSize="24dp"
-        app:backgroundTint="@android:color/holo_orange_light"
+        app:backgroundTint="@android:color/holo_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.136"
@@ -28,14 +28,14 @@
         app:layout_constraintVertical_bias="0.284" />
 
     <Button
-        android:id="@+id/signinbtn2"
+        android:id="@+id/signupbtn"
         android:layout_width="185dp"
         android:layout_height="64dp"
         android:layout_marginBottom="16dp"
         android:text="Đăng ký"
         android:textColor="@color/white"
         android:textSize="24dp"
-        app:backgroundTint="@android:color/holo_orange_light"
+        app:backgroundTint="@android:color/holo_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.929"
@@ -53,10 +53,10 @@
         android:layout_marginBottom="100dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white"
-        android:textColorLink="@color/white"
+        android:textColor="@color/purple_500"
+        android:textColorHighlight="@color/purple_500"
+        android:textColorHint="@color/purple_500"
+        android:textColorLink="@color/purple_500"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -73,7 +73,7 @@
         android:layout_marginBottom="28dp"
         android:text="Xác định mật khẩu"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_500"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/loginusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginBottom="28dp"
         android:text="Mật khẩu"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_500"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/loginusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
         android:layout_marginBottom="28dp"
         android:text="Tên đăng ký"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_500"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/loginusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,9 +120,9 @@
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="336dp"
-        android:hint="Tên đăng nhập của nhân viên"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:hint="Nhập tên mà nhân viên muốn"
+        android:textColor="@color/purple_500"
+        android:textColorHint="@color/purple_500"
         android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/registerpasswordtxt"
         app:layout_constraintRight_toRightOf="parent"
@@ -140,10 +140,10 @@
         android:layout_marginBottom="216dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white"
-        android:textColorLink="@color/white"
+        android:textColor="@color/purple_500"
+        android:textColorHighlight="@color/purple_500"
+        android:textColorHint="@color/purple_500"
+        android:textColorLink="@color/purple_500"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -152,7 +152,20 @@
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="411dp"
+        android:layout_height="267dp"
+        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
+        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
+        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/backgroundcolor" />
+
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/appCompatImageView"
         android:layout_width="408dp"
         android:layout_height="271dp"
         android:src="@drawable/sweets1"
@@ -163,4 +176,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:tint="@color/white" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
