--- a/app/src/main/res/layout/activity_add_candy.xml
+++ b/app/src/main/res/layout/activity_add_candy.xml
@@ -81,20 +81,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.745" />
 
-    <ImageView
-        android:id="@+id/imageofcandy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.462"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.864"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <Button
-        android:id="@+id/addcandyproductbtn"
+        android:id="@+id/updatecandyproductbtn"
         android:layout_width="225dp"
         android:layout_height="63dp"
         android:text="Thêm sản phẩm"
