--- a/app/src/main/res/layout/activity_registeractivity.xml
+++ b/app/src/main/res/layout/activity_registeractivity.xml
@@ -8,8 +8,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/appCompatImageView6"
-        android:layout_width="408dp"
-        android:layout_height="271dp"
+        android:layout_width="401dp"
+        android:layout_height="185dp"
         android:src="@drawable/sweets1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="411dp"
-        android:layout_height="267dp"
+        android:layout_height="187dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -33,12 +33,12 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/appCompatImageView"
-        android:layout_width="408dp"
-        android:layout_height="271dp"
+        android:layout_width="411dp"
+        android:layout_height="187dp"
         android:src="@drawable/sweets1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -55,35 +55,19 @@
         app:backgroundTint="@android:color/holo_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginpasswordtxt"
-        app:layout_constraintVertical_bias="0.284" />
-
-    <Button
-        android:id="@+id/backtologinpagebtn"
-        android:layout_width="155dp"
-        android:layout_height="63dp"
-        android:layout_marginBottom="16dp"
-        android:text="Quay lại"
-        android:textColor="@color/white"
-        android:textSize="24dp"
-        app:backgroundTint="@android:color/holo_purple"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginpasswordtxt"
+        app:layout_constraintTop_toBottomOf="@+id/loginadminpasswordtxt"
         app:layout_constraintVertical_bias="0.284" />
 
     <EditText
         android:id="@+id/confirmregpasstxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="407dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginTop="112dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="244dp"
         android:ems="10"
         android:inputType="textPassword"
         android:textColor="@color/purple_500"
@@ -94,7 +78,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginusernametxt"
+        app:layout_constraintTop_toBottomOf="@+id/loginadminusernametxt"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -102,15 +86,14 @@
         android:id="@+id/usernameloginlbl3"
         android:layout_width="301dp"
         android:layout_height="55dp"
-        android:layout_marginTop="520dp"
+        android:layout_marginTop="392dp"
         android:layout_marginBottom="28dp"
         android:text="Xác định mật khẩu"
         android:textAllCaps="true"
         android:textColor="@color/purple_500"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/loginusernametxt"
+        app:layout_constraintBottom_toTopOf="@+id/loginadminusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -118,10 +101,10 @@
         android:id="@+id/registerpasswordtxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="112dp"
-        android:layout_marginBottom="216dp"
+        android:layout_marginBottom="336dp"
         android:ems="10"
         android:inputType="textPassword"
         android:textColor="@color/purple_500"
@@ -132,7 +115,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginusernametxt"
+        app:layout_constraintTop_toBottomOf="@+id/loginadminusernametxt"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -140,13 +123,13 @@
         android:id="@+id/usernameloginlbl4"
         android:layout_width="170dp"
         android:layout_height="51dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="304dp"
         android:layout_marginBottom="28dp"
         android:text="Mật khẩu"
         android:textAllCaps="true"
         android:textColor="@color/purple_500"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/loginusernametxt"
+        app:layout_constraintBottom_toTopOf="@+id/loginadminusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,31 +141,59 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="336dp"
-        android:hint="Nhập tên mà nhân viên muốn"
+        android:alpha="0.4"
+        android:hint="Nhập tên mà nhân viên hay khách hàng muốn"
         android:textColor="@color/purple_500"
         android:textColorHint="@color/purple_500"
         android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/registerpasswordtxt"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.041" />
+        app:layout_constraintVertical_bias="0.358" />
 
     <TextView
         android:id="@+id/usernameloginlbl8"
         android:layout_width="196dp"
         android:layout_height="52dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="184dp"
         android:layout_marginBottom="28dp"
         android:text="Tên đăng ký"
         android:textAllCaps="true"
         android:textColor="@color/purple_500"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/loginusernametxt"
+        app:layout_constraintBottom_toTopOf="@+id/loginadminusernametxt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/chckboxgroup"
+        android:layout_width="368dp"
+        android:layout_height="129dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.627"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.833">
+
+        <RadioButton
+            android:id="@+id/Adminchckbox"
+            android:layout_width="match_parent"
+            android:layout_height="66dp"
+            android:text="Nhân viên"
+            android:textColor="@color/purple_500"
+            android:textSize="30sp" />
+
+        <RadioButton
+            android:id="@+id/clientchckbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Khách hàng"
+            android:textColor="@color/purple_500"
+            android:textSize="30sp" />
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
