--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -309,8 +309,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="404dp"
-        android:layout_height="91dp"
+        android:layout_width="402dp"
+        android:layout_height="64dp"
         android:text="CỬA HÀNG KẸO BBHL"
         android:textColor="@color/white"
         android:textSize="40sp"
@@ -349,17 +349,78 @@
         app:srcCompat="@drawable/jellybean1" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signinbysidesbtn"
         android:layout_width="281dp"
         android:layout_height="72dp"
+        android:alpha="0.8"
         android:text="Bắt đầu"
         android:textSize="40sp"
         app:backgroundTint="@android:color/holo_red_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.468"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.396" />
+        app:layout_constraintVertical_bias="0.567" />
+
+    <TextView
+        android:id="@+id/signuplink1"
+        android:layout_width="373dp"
+        android:layout_height="48dp"
+        android:clickable="true"
+        android:fontFamily="sans-serif"
+        android:text="Nhấn vào đây để đăng ký"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.667" />
+
+    <TextView
+        android:id="@+id/definelbl"
+        android:layout_width="146dp"
+        android:layout_height="54dp"
+        android:text="Bạn là: "
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="normal|bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.27" />
+
+    <RadioGroup
+        android:layout_width="236dp"
+        android:layout_height="134dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.381" >
+
+        <RadioButton
+            android:id="@+id/adminchckbox1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nhân viên"
+            android:textColor="@color/white"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+        <RadioButton
+            android:id="@+id/clientchckbox1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Khách hàng"
+            android:textColor="@color/white"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
